--- a/status-checkers/logsearchshipper-bosh-event-data-exists-status-checker/logstash.conf
+++ b/status-checkers/logsearchshipper-bosh-event-data-exists-status-checker/logstash.conf
@@ -10,21 +10,21 @@ filter {
       source => "message"
     }
 
-    calculate_component_status {
-      component_records => "[hits][hits]"
+    extract_components {
+      source => "aggregations"
     }
 
 }
 
 output {    
 
-  stdout { codec => json_lines }
+  stdout { codec => rubydebug }
 
   elasticsearch_http {
-    index => ".statuses"
+    index => ".component-status"
     host => "api.meta.logsearch.io"
     port => 9200
-    index_type => "check"
+    index_type => "%{_type}"
   }
   
 }
