--- a/status-checkers/logsearchshipper-bosh-event-data-exists-status-checker/manifest.yml
+++ b/status-checkers/logsearchshipper-bosh-event-data-exists-status-checker/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: component-maker
+- name: logsearchshipper-bosh-event-data-exists-status-checker
   memory: 512M 
   instances: 1
   path: .
